<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/status_downloader"
    tools:context="com.appdev.statusdownloader.AboutApp">

    <ImageView
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:src="@mipmap/ic_status"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="180dp"
        android:contentDescription="@string/app_logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version_1_0"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/privacyPolicy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privacy_policy"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:textColor="@android:color/holo_blue_light"/>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adViewAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="SMART_BANNER"
        app:adUnitId="@string/ad_unit_id"
        android:layout_marginTop="120dp"
        android:visibility="gone">
    </com.google.android.gms.ads.AdView>

</LinearLayout>
