<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rename_file"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/edtRenameFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:lines="2"/>

    <TextView
        android:id="@+id/txtHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_do_not_erase_the_file_extension_name_like_jpg_or_mp4"
        android:textStyle="bold|italic"
        android:textSize="12sp"/>

    <CheckBox
        android:id="@+id/ckb_default_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_default_file_name"
        android:textSize="12sp"/>

</LinearLayout>