<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/status_downloader"
    android:padding="20dp"
    tools:context="com.appdev.statusdownloader.AppUpdateActivity">

    <ImageView
        android:id="@+id/appUpdateIcon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/app_update"
        android:contentDescription="@string/appupdateicon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"/>

    <TextView
        android:id="@+id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_re_missing_out"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/appUpdateIcon"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_your_status_downloader_app_for_the_newest_features"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/txt1"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:foreground="?android:attr/selectableItemBackground"
            android:focusable="true"
            android:textColor="@android:color/white"
            android:text="@string/update"/>

        <Button
            android:id="@+id/btnNotNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:foreground="?android:attr/selectableItemBackground"
            android:focusable="true"
            android:textColor="@android:color/white"
            android:text="@string/not_now"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

</RelativeLayout>
